--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "arweave-backfiller",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "arweave": "^1.15.7"
+    "arweave": "^1.15.7",
+    "axios": "^1.10.0"
   }
 }
