--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "arweave-backfiller",
+  "name": "backfill-from-irys",
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "LOCAL_DEV=true node src/index.mjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "arweave": "^1.15.7",
-    "axios": "^1.10.0"
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   }
 }
